* skript.latex:   + Das Dokument an die Vorlage 88 angepasst.     - Vorwort verändert
    - Pakete für Satzverbesserung eingebunden

  + Fehler im Skript korrigiert:
    - „Hamburg liegt n̶i̶c̶h̶t̶ in Thüringen“

    - „Jena liegt an derr̸ Saale“

    - „einer aussagenlogischen̳ Formel“

  + Erweiterung/Verbesserungen:
    - Der Definition von aussagenlogischen Formeln einen Namen gegeben.

    - Die Größe von Klammern an mehreren Stellen verbessert.

    - Erklärung von Literal.

    - Bei der Definition von Tautologie noch die Kontradiktion erklärt.

    - Die Tabelle mit der Wahrheitstafel zur table gemacht.

    - Den Text bei der DNF umstrukturiert.

    - Den Text zum Satz über äquivalente Formeln mit \neg und \wedge
      aufgebessert.

  + Neue Indexeinträge für Implikation, Konjuntion, Disjunktion und
    Äquivalenz.

  + Im gesamten Dokument die Doppelpunkte im mathmode durch \colon
    ersetzt. Der Doppelpunkt ist der Operator für Division „1:2 = 0,5“
    und hat andere Abstände links und rechts, als \colon, das dann das
    ist, was man will. Besonders fällt es bei $g:A\rightarrow B$ auf.

  + Das \centerline durch ein \centering ersetzt. nag hat gewarnt. :-)


git-svn-id: https://svn.lug-jena.de/uni-skripte@355 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -59,6 +59,9 @@
                          % Neudefinition von \emph
 \usepackage{mparhack}    % Korrigiert einige Probleme mit \marginpar; die
                          % Option [debug] ist hilfreich bei Problemen
+\usepackage{ellipsis}    % Korrektur für \dots
+\usepackage{fixltx2e}
+\usepackage[final]{microtype} % Verbesserung der Typographie
 \usepackage{ifpdf}
 \usepackage{fancyvrb}
 
@@ -259,21 +262,24 @@
 \clearpage
 \chapter*{Vorwort}
 
-% entspricht Vorlage: 86
+% entspricht Vorlage: 88
 \begin{itshape}
-  Für das Projekt
-  "`\href{http://www.minet.uni-jena.de/~joergs/skripte/}{
-  Vorlesungsskripte der Fakultät für Mathematik und Informatik}"'
-  entstand das vorliegende Dokument und wird auch im Rahmen dieses
-  Projekts weiter betreut. Das
-  Skript ist nach bestem Wissen und Gewissen entstanden. Denoch
-  garantiert weder der auf der Titelseite genannte Dozent, noch die
+  Dieses Dokument wurde als Skript für die auf der
+  Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
+  Projekts
+  "`\href{http://www.minet.uni-jena.de/~joergs/skripte/}
+  {Vorlesungsskripte der Fakultät für Mathematik}
+  \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}"'
+  weiter betreut. Das
+  Dokument wurde nach bestem Wissen und Gewissen angefertigt. Denoch
+  garantiert weder der auf der Titelseite genannte Dozent, die Personen,
+  die an dem Dokument mitgewirkt haben, noch die
   Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
   und dessen Folgen wird von keiner der genannten Personen eine Haftung
-  übernommen. Es steht jeder Person frei, dieses Skript zu lesen, zu
+  übernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
   verändern oder auf anderen Medien verfügbar zu machen, solange ein
-  Verweis die Internetadresse
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/} des Projekts
+  Verweis auf die Internetadresse des Projekts
+  \url{http://www.minet.uni-jena.de/~joergs/skripte/}
   enthalten ist.
 
   Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
@@ -335,7 +341,7 @@ Beispiele für Aussagen:
 \begin{itemize}
  \item Die Straße ist nass. (falsche Aussage)
  \item Jena liegt an der Saale. (wahre Aussage)
- \item Hamburg liegt nicht in Thüringen. (falsche Aussage)
+ \item Hamburg liegt in Thüringen. (falsche Aussage)
 \end{itemize}
 
 \emph{Negation} einer Aussage:
@@ -351,7 +357,7 @@ Beispiele für Aussagen:
 
 \emph{Disjunktion} zweier Aussagen:
 \begin{itemize}
- \item Jena liegt an derr Saale \emph{oder} die Straße ist nicht nass.
+ \item Jena liegt an der Saale \emph{oder} die Straße ist nicht nass.
 \end{itemize}
 
 \textit{Vorsicht:} Umgangssprachlich versteht man unter "`oder"' oft ein
@@ -377,7 +383,7 @@ B_{2},\ldots$ und anstatt Verknüpfungen setzt man Symbole: $\neg$
 (Negation), $\wedge$ (Konjunktion), $\vee$ (Disjunktion), $\rightarrow$
 (Implikation), $\leftrightarrow$ (Äquivalenz)
 
-\begin{defini}
+\begin{defini}[Aussagenlogische Formel]
   Aussagenlogische Formeln sind wie folgt definiert:
   \begin{enumerate}
    \item Jede Variable $A_{0}, A_{1}, A_{2}, \ldots,B_{0}, B_{1}, B_{2},
@@ -396,8 +402,8 @@ B_{2},\ldots$ und anstatt Verknüpfungen setzt man Symbole: $\neg$
   Wenn $A_{12}$ und $B_{1}$ aussagenlogische Formeln sind, dann sind dies
 auch aussagenlogische Formeln:
   \begin{gather*}
-    (A_{12} \wedge B_{1}), ((\neg A_{5}) \rightarrow B_{1}),
-       ((A_{12}\wedge B_{1}) \vee (\neg ((\neg A_{5})\rightarrow B_{1}))
+    (A_{12} \wedge B_{1}), \big((\neg A_{5}) \rightarrow B_{1}\big),
+       \big((A_{12}\wedge B_{1}) \vee \big(\neg ((\neg A_{5})\rightarrow B_{1})\big)\big)
   \end{gather*}
 \end{bsp}
 
@@ -418,8 +424,8 @@ auch als Variablen genommen werden.
   \end{gather*}
 \end{bemerk}
 
-Jede Variable einer aussagenlogische Formel kann einen der
-\emph{Wahrheitswerte} $w$ ("`\emph{wahr}"', $T$, 1) und $f$
+Jede Variable einer aussagenlogischen Formel kann einen der
+\emph[indexrand=Wahrheitswert]{Wahrheitswerte} $w$ ("`\emph{wahr}"', $T$, 1) oder $f$
 ("`\emph{falsch}"', $F$, 0) annehmen. Der Wahrheitswert einer
 zusammengesetzen Formel ergibt sich aus den Wahrheitswerten ihrer Teile.
 
@@ -478,8 +484,8 @@ Wahrheitswerte. Wir beschreiben eine Belegung durch eine Menge
 mit $\{A_{i}, \neg A_{i}\}\not\subseteq \mathcal{A}$ und $\{B_{i}, \neg
 B_{i}\}\not\subseteq \mathcal{A}$ für alle $i$.
 
-$A_{i},B_{i}, \neg A_{i}, \ldots$ und $\neg B_{i}$ nennt man
-\emph{Literale}.
+Als ein \emph{Literal} bezeichnet man eine Variable oder deren Negation:
+$A_{i},B_{i}, \neg A_{i}$ und $\neg B_{i}$.
 
 Eine Belegung $\mathcal{A}$ \emph{passt} zur Formel $\alpha$, falls für
 jede Variable $X$, die in der Formel $\alpha$ vorkommt, gilt:
@@ -499,7 +505,7 @@ induktiv definiert:
                            \end{cases}
   \end{gather*}
 
- \item $\alpha$ ist eine Konjunktion $(\beta\wedge\gamma)$:
+ \item $\alpha$ ist eine \emph{Konjunktion} $(\beta\wedge\gamma)$:
   \begin{gather*}
     \mathcal{A}(\alpha) =
        \begin{cases}
@@ -508,7 +514,7 @@ induktiv definiert:
        \end{cases}
   \end{gather*}
 
- \item $\alpha$ ist eine Disjunktion $(\beta\vee\gamma)$:
+ \item $\alpha$ ist eine \emph{Disjunktion} $(\beta\vee\gamma)$:
   \begin{gather*}
     \mathcal{A}(\alpha) =
        \begin{cases}
@@ -517,7 +523,7 @@ induktiv definiert:
        \end{cases}
   \end{gather*}
 
- \item $\alpha$ ist eine Implikation $(\beta\rightarrow\gamma)$:
+ \item $\alpha$ ist eine \emph{Implikation} $(\beta\rightarrow\gamma)$:
   \begin{gather*}
     \mathcal{A}(\alpha) =
        \begin{cases}
@@ -526,7 +532,7 @@ induktiv definiert:
        \end{cases}
   \end{gather*}
 
- \item $\alpha$ ist eine Äquivalenz $(\beta\leftrightarrow\gamma)$:
+ \item $\alpha$ ist eine \emph{Äquivalenz} $(\beta\leftrightarrow\gamma)$:
   \begin{gather*}
     \mathcal{A}(\alpha) =
        \begin{cases}
@@ -536,14 +542,15 @@ induktiv definiert:
   \end{gather*}
 \end{faelle}
 
-\begin{defini}[Tautologie]
+\begin{defini}[Tautologie und Kontradiktion]
   Eine Formel, die unter jeder passenden Belegung den Wahrheitswert $w$
-  hat, nennt man \emph{Tautologie}.
+  hat, nennt man \emph{Tautologie}. Eine Formel für die unter allen
+  Belegunden der Wahrheitswert $f$ ist, nennt man \emph{Kontradiktion}.
 \end{defini}
 
 Beispiele für Tautologien sind $A\vee\neg A$ oder
 $A\rightarrow(B\rightarrow A)$ oder der nicht so leicht überschaubare
-Ausdruck $((A\rightarrow B)\wedge (B\rightarrow C) ) \rightarrow
+Ausdruck $\big((A\rightarrow B)\wedge (B\rightarrow C) \big) \rightarrow
 (A\rightarrow C)$.
 
 % 2006-04-19
@@ -585,13 +592,13 @@ Grundlegene Äquivalenzen:
  \item $A \wedge A \equiv A$\\
   $A\vee A \equiv A$ \hfill (\emph{Absorbtion})
  \item $A \wedge \phi \equiv A$ für alle Tautologien $\phi$\\
-  $A \vee \psi \equiv A$ für alle Formeln $\psi$, die immer falsch sind.
+  $A \vee \psi \equiv A$ für alle Kontradiktionen $\psi$.
  \item $A\rightarrow B \equiv \neg A\vee B$
  \item $A\leftrightarrow B \equiv (A\wedge B) \vee (\neg A\wedge\neg B)$
 \end{itemize}
 
 Für jede Aussagenvariable kann eine beliebige Formel eingesetzt werden.
-Die daraus entstehenden Formeln bleiben äquivalent. Beispiel:
+Die daraus entstehenden Formeln bleiben äquivalent. Ein Beispiel:
 \begin{gather*}
   (A\rightarrow B) \wedge (C \vee \neg B) \equiv (C\vee \neg B) \wedge
      (A\rightarrow B)
@@ -622,41 +629,33 @@ $A\rightarrow B \equiv \neg B \rightarrow \neg A$, denn
 \subsection{Sind alle Operationen \texorpdfstring{$\neg, \wedge, \vee, \rightarrow,
 \leftrightarrow$}{} nötig?}
 
-Eine \emph{Boole'sche Funktion} $g$ ist eine Funktion $g:\{w,f\}^{k}
+Eine \emph{Boole'sche Funktion} $g$ ist eine Funktion $g\colon\{w,f\}^{k}
 \rightarrow\{w,f\}$. Jede Boole'sche Funktion lässt sich durch eine
 \emph{Wahrheitstafel} beschreiben.
 
-\begin{tabular}{ccc|cl}
-  $A_{1}$ & $A_{2}$ & $A_{3}$ & $g(A_{1},A_{2}, A_{3})$ & \\
-  \hline
-  $f$ & $f$ & $f$ & $f$ &\\
-  $f$ & $f$ & $w$ & $w$ & $\leftarrow$\\
-  $f$ & $w$ & $f$ & $w$ & $\leftarrow$\\
-  $f$ & $w$ & $w$ & $f$ &\\
-  $w$ & $f$ & $f$ & $w$ & $\leftarrow$\\
-  $w$ & $f$ & $w$ & $f$ &\\
-  $w$ & $w$ & $f$ & $w$ & $\leftarrow$\\
-  $w$ & $w$ & $w$ & $f$ &\\
-\end{tabular}
+\begin{table}
+  \centering
+  \begin{tabular}{ccc|cl}
+    $A_{1}$ & $A_{2}$ & $A_{3}$ & $g(A_{1},A_{2}, A_{3})$ & \\
+    \hline
+    $f$ & $f$ & $f$ & $f$ &\\
+    $f$ & $f$ & $w$ & $w$ & $\star$\\
+    $f$ & $w$ & $f$ & $w$ & $\star$\\
+    $f$ & $w$ & $w$ & $f$ &\\
+    $w$ & $f$ & $f$ & $w$ & $\star$\\
+    $w$ & $f$ & $w$ & $f$ &\\
+    $w$ & $w$ & $f$ & $w$ & $\star$\\
+    $w$ & $w$ & $w$ & $f$ &\\
+  \end{tabular}
+  \caption{Wahrheitstafel der Funktion $g$}
+  % g(A_{1},A_{2},A_{3})=\neg \big(A_{1}\vee(A_{3}\leftrightarrow
+  % A_{2})\big) \vee (A_{1}\wedge\neg A_{3})$}
+  \label{tab:wahrheitstafel}
+\end{table}
 
-Die \emph{disjunktive Normalform} der Funktion $g$ lässt sich leicht
-aufstellen, indem man die Literale aller Zeilen, für die die Funktion
-wahr ist, konjunktiv verknüpft und diese Terme disjunktiv verknüpft:
-\begin{gather*}
-  \phi = (\neg A_{1} \wedge \neg A_{2} \wedge A_{3}) \vee (\neg A_{1}\wedge
-     A_{2} \wedge \neg A_{3}) \vee (A_{1} \wedge \neg A_{2}\wedge \neg
-     A_{3}) \vee (A_{1}\wedge A_{2} \wedge \neg A_{3})\\
-  \mathcal{A} = \{A_{1}, \neg A_{2}, \neg A_{3}\}, \mathcal{A}(\phi) =
-     w = g(w,f,f)\\
-  \mathcal{A}' = \{\neg A_{1}, \neg A_{2}, \neg A_{3}\},
-     \mathcal{A}'(\phi) = f = g(f,f,f)
-\end{gather*}
-
-Jede Boole'sche Funktion lässt sich durch eine aussagenlogische Formel
-mit Verknüpfungszeichen $\neg, \wedge, \vee$ darstellen.
-
-Eine Formel ist in disjunktiver Normalform, wenn sie eine Disjunktion von
-Konjunktionen von Literalen ist:
+Eine Formel ist in \emph[index=Normalform!disjunktive]{disjunktiver
+Normalform} (\emph[index={DNF|see{Normalform, disjunktive}}]{DNF}) wenn sie eine
+Disjunktion von Konjunktionen von Literalen ist:
 \begin{gather*}
   \bigvee \bigwedge \alpha
 \end{gather*}
@@ -664,35 +663,57 @@ Konjunktionen von Literalen ist:
 Für jede beliebige aussagenlogische Formel gibt es eine äquivalente
 Formel in disjunktiver Normalform. (ohne Beweis)
 
+Die disjunktive Normalform der Funktion~$g$ lässt sich leicht
+aufstellen, indem man die Literale aller Zeilen, für die die Funktion
+wahr ist (Zeilen mit $\star$ in \autoref{tab:wahrheitstafel}), konjunktiv
+verknüpft und diese Terme wiederum disjunktiv verknüpft:
+\begin{gather*}
+  \phi = (\neg A_{1} \wedge \neg A_{2} \wedge A_{3}) \vee (\neg A_{1}\wedge
+     A_{2} \wedge \neg A_{3}) \vee (A_{1} \wedge \neg A_{2}\wedge \neg
+     A_{3}) \vee (A_{1}\wedge A_{2} \wedge \neg A_{3})\\
+  \begin{aligned}
+    \mathcal{A} &= \{A_{1}, \neg A_{2}, \neg A_{3}\},
+      &\mathcal{A}(\phi) &= w = g(w,f,f)\\
+    \mathcal{A}' &= \{\neg A_{1}, \neg A_{2}, \neg A_{3}\},
+      &\mathcal{A}'(\phi) &= f = g(f,f,f)
+  \end{aligned}
+\end{gather*}
+
+Jede Boole'sche Funktion lässt sich auf diese Weise durch eine aussagenlogische Formel
+mit den Verknüpfungszeichen $\neg, \wedge$ und $\vee$ darstellen.
+
 \begin{satz}
   Für jede aussagenlogische Formel gibt es eine äquivalente Formel, die
   nur die Verknüpfungszeichen $\neg$ und $\wedge$ enthält.
 
   \begin{proof}
-    Sei $\alpha$ eine aussagenlogische Formel. O.\,B.\,d.\,A. enthält
-    $\alpha$ nur die Verknüpfungszeichen $\neg, \wedge, \vee$. Wir führen
+    Sei $\alpha$ eine aussagenlogische Formel. O.\,B.\,d.\,A. enthalte
+    $\alpha$ nur die Verknüpfungszeichen $\neg, \wedge$ und $\vee$. Wir führen
     eine Induktion über den Formelaufbau.
 
     \begin{mdescription}
-     \item[IA:] $\alpha$ ist eine Variable $A$
+     \item[IA:] $\alpha$ ist eine Variable $A$ und damit trivialer Weise
+      in DNF.
 
      \item[IV:] Für beliebige Formeln $\beta$ und $\gamma$ gibt es
       äquivalente Formeln $\beta' \equiv \beta$ und
       $\gamma'\equiv\gamma$, die nur $\neg$ und $\wedge$ enthalten.
 
-     \item[IS:]
+     \item[IS:] Es ist zu zeigen, dass zu jeder Formel deren Teilformeln
+      nur $\neg$ und $\wedge$ enthalten eine äquivalente Formel mit nur
+      den Verknüpfungen $\neg$ und $\wedge$ existiert.
       \begin{faelle}
-       \item $\alpha=\neg\beta$. Dann gilt: $\alpha\equiv\neg\beta'$ und
+       \item Sei $\alpha=\neg\beta$. Dann gilt: $\alpha\equiv\neg\beta'$ und
         $\neg\beta'$ enthält nach Induktionsvorraussetzung nur $\neg$ und $\wedge$.
 
-       \item $\alpha = \beta\wedge\gamma$. Dann gilt:
-        $\alpha\equiv\beta'\wedge\gamma'$. Nach Induktionsvorraussetzung hat
-        $\beta'\wedge\gamma'$ nur $\neg$ und $\wedge$ als
+       \item Habe $\alpha$ die Gestalt $\beta\wedge\gamma$. Dann gilt:
+        $\alpha\equiv\beta'\wedge\gamma'$. Nach Induktionsvorraussetzung enthalten
+        $\beta'$ und $\gamma'$ nur $\neg$ und $\wedge$ als
         Verknüpfungszeichen.
 
-       \item $\alpha=\beta\vee\gamma$. Dann gilt:
+       \item Ist $\alpha$ von der Gestalt $\beta\vee\gamma$. Dann gilt:
         $\alpha\equiv\beta'\vee\gamma'\equiv\neg(\neg\beta'\wedge\gamma')$
-        Nach Induktionsvorraussetzung hat $\neg(\neg\beta'\wedge\gamma')$ nur $\neg$ und
+        Nach Induktionsvorraussetzung enthält $\neg(\neg\beta'\wedge\gamma')$ nur $\neg$ und
         $\wedge$ als Verknüpfungszeichen.
       \end{faelle}
     \end{mdescription}
@@ -2080,8 +2101,9 @@ die Resolutionswiderlegung von $\lneg \alpha$.
 Also ist $\alpha$ eine Tautologie.
 %
 \begin{figure}[t]
-\centerline{\includegraphics{resolution.8}}
-\caption{Widerlegung von $\lneg\alpha$ mittels Resolution}\label{last-resolution}
+  \centering
+  \includegraphics{resolution.8}
+  \caption{Widerlegung von $\lneg\alpha$ mittels Resolution}\label{last-resolution}
 \end{figure}
 
 % 16.5.06
@@ -2103,9 +2125,9 @@ T:=\ensuremath{\emptyset}
 
 Optimierungen:
 \begin{itemize}
- \item $\exists A, B\in S: A \subset B $ $\Rightarrow$ $S
+ \item $\exists A, B\in S\colon A \subset B $ $\Rightarrow$ $S
   := S\setminus \{ B \}$
- \item $\exists A\in S: x\in A, \neg x\in A$ $\Rightarrow$ $S := S\setminus
+ \item $\exists A\in S\colon x\in A, \neg x\in A$ $\Rightarrow$ $S := S\setminus
   \{A\}$
 \end{itemize}
 
@@ -2253,8 +2275,8 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
    \item Eigenschaft $M(x,y)$ mit der Bedeutung "`$x$ mag $y$"'
    \item Individuen $a$ bedeutet "`ich"', $b$ bedeutet "`meine Frau"' und
     $c$ bedeutet "`Peter"'
-   \item Quantoren über Variablen: $\forall x: P(x)$ heißt "`für alle $x$
-    gilt Eigenschaft $P$"' (im Bsp.: $\forall x: M(x,a) \rightarrow M(x,b)$)
+   \item Quantoren über Variablen: $\forall x\colon P(x)$ heißt "`für alle $x$
+    gilt Eigenschaft $P$"' (im Bsp.: $\forall x\colon M(x,a) \rightarrow M(x,b)$)
   \end{itemize}
 \end{bsp}
 
@@ -2270,7 +2292,7 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
   \end{tabular}
   $G$ und $E$ sind Eigenschaften, $f$ ist eine Funktion
 
-  $\forall x: (G(x) \wedge E(x))\rightarrow \neg E(f(x))$
+  $\forall x\colon (G(x) \wedge E(x))\rightarrow \neg E(f(x))$
 
   Also folgt aus $G(b)$ und $E(b)$, dass $\neg E(f(b))$ gilt.
 \end{bsp}
@@ -2283,9 +2305,9 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
 \end{defini}
 
 \begin{tabular}{l@{\qquad}l}
-  Alle Vierbeiner können laufen & $\forall x: V(x) \rightarrow L(x)$\\
-  Es gibt Tiere, die Vierbeiner sind & $\exists x: T(x) \wedge V(x)$\\
-  Also gibt es Tiere, die laufen können & $\exists x: T(x) \wedge L(x)$
+  Alle Vierbeiner können laufen & $\forall x\colon V(x) \rightarrow L(x)$\\
+  Es gibt Tiere, die Vierbeiner sind & $\exists x\colon T(x) \wedge V(x)$\\
+  Also gibt es Tiere, die laufen können & $\exists x\colon T(x) \wedge L(x)$
 \end{tabular}
 
 Die "`Sprache"' der Theorien 1.\,Ordnung:
@@ -2392,7 +2414,7 @@ Gültigkeitsbereich eines Quantors für eine Variable in $t$ liegt.
   \end{enumerate}
 
   Für die Grundmenge $\N$ und $A_{1}^{2}$ mit der Bedeutung $\leq$
-  ($A_{1}^{2}=\{(n,m)\in\N\times\N: n\leq m\}$) bedeuten die Aussagen:
+  ($A_{1}^{2}=\{(n,m)\in\N\times\N\colon n\leq m\}$) bedeuten die Aussagen:
   \begin{enumerate}
    \item $x_{1}\leq x_{2}$
    \item Für alle $x_{1}\in\N$ gilt $x_{1}\leq x_{2}$, d.\,h. $x_{1}=0$
@@ -3066,7 +3088,7 @@ Vorüberlegung: es gibt (nur) abzählbar viele Formeln.
       $g(u)$ & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & \ldots
     \end{tabular}
 
-    Formal $\alpha=u_{1}u_{2}\ldots u_{k}$ wird kodiert durch $g^{\ast}:
+    Formal $\alpha=u_{1}u_{2}\ldots u_{k}$ wird kodiert durch $g^{\ast}\colon
     \mathrm{Menge aller Formeln}\rightarrow\N$ mit $g^{\ast}(u_{1}\ldots
     u_{k}) = 2^{g(u_{1})}\cdot 3^{g(u_{2})}\cdot 5^{g(u_{3})}\cdot \ldots
     p_{k}^{g(u_{k})}$, wobei $p_{k}$ die $k$-te Primzahl ist.
@@ -3648,7 +3670,7 @@ Warum funktioniert der Beweis bei folgender Formel nicht?
 
 \subsection*{Aufgabe 3}
 Gebundene Umbenennung von Variablen. Bsp.: $\exists c \exists n_{0}^{n}
-\forall n: (n\geq n_{0}) \rightarrow (f(n)\subseteq c\cdot g(n_{0}))$
+\forall n\colon (n\geq n_{0}) \rightarrow (f(n)\subseteq c\cdot g(n_{0}))$
 
 Formal: Sei $\alpha$ eine Formel mit freier Variablen $x$ ohne freies
 Vorkommen von $y$ und mit $y$ frei für $x$ in $\alpha$. Dann gilt:
