--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -3219,6 +3219,154 @@ jeder beliebige Theorie 1.\,Ordnung.
     \rightarrow\alpha)$ und zweimal modus ponens folgt $\vdash_{K}\alpha$.
   \end{proof}
 \end{bemerk}
+
+
+Die Theoreme eines Pr\"adikatenkal\"uls 1.\,Ordnung $K$
+sind g\"ultige Formeln.
+Wir wollen feststellen, ob 
+es eine g\"ultige Formel gibt, die kein Theorem von $K$ ist.
+G\"abe es eine solche Formel, dann k\"onnte man sie
+als zus\"atzliches Axiom zu $K$ hinzuf\"ugen.
+Diese erweiterte Theorie bliebe konsistent.
+
+Wenn $\alpha$ g\"ultig ist, dann ist $\neg \alpha$ 
+nicht g\"ultig und nicht beweisbar in $K$.
+Die Nicht-Beweisbarkeit von $\neg \alpha$ reicht aus,
+um die Konsistenz der um Axiom $\alpha$ erweiterten Theorie zu beweisen.
+
+
+\begin{lemma}\label{lemma-kons-erweiterung}
+Sei $K$ eine konsistente Theorie,
+und $\alpha$ sei eine geschlossene Formel.
+$K'$ sei die Theorie, die aus $K$ durch Hinzuf\"ugen des
+zus\"atzlichen Axioms $\alpha$ entsteht.
+Dann gilt:
+
+\centering{%
+wenn $\neg \alpha$ in $K$ nicht beweisbar ist (d.\,h.\,$\not\vdash_{K} \neg \alpha$),
+dann ist $K'$ konsistent.
+}
+\end{lemma}
+
+\begin{proof}
+Wir beweisen das Lemma, indem wir zeigen:
+wenn $K'$ nicht konsistent ist, dann gilt $\vdash_{K} \neg \alpha$.
+
+Sei also $K'$ nicht konsistent.
+Dann gibt es eine Formel $\beta$
+mit $\vdash_{K'} \beta$ und $\vdash_{K'} \neg\beta$.
+Die Formel $\beta\rightarrow(\neg \beta \rightarrow \neg \alpha)$
+ist Instanz einer Tautologie und deshalb in $K'$ beweisbar.
+Durch Anwendung von modus ponens erh\"alt man 
+aus den letzten drei Formeln
+$\vdash_{K'} \neg \alpha$.
+
+Da das zus\"atzliche Axiom $\alpha$ der einzige Unterschied
+zwischen $K$ und $K'$ ist,
+ist der Beweis f\"ur $\neg \alpha$ in $K'$
+auch ein Beweis in $K$ mit Hypothese $\alpha$,
+d.\,h.\,$\alpha \vdash_{K} \neg \alpha$.
+Da $\alpha$ geschlossen ist,
+kann das Deduktionstheorem angewendet werden,
+und man erh\"alt $\vdash_{K} \alpha \rightarrow \neg \alpha$.
+Die Formel $(\alpha \rightarrow \neg \alpha) \rightarrow \neg \alpha$
+ist Instanz einer Tautologie
+und deshalb in $K$ beweisbar.
+Mit modus ponens folgt aus den letzten beiden Formeln
+$\vdash_{K} \neg \alpha$.
+\end{proof}
+
+Die Theoreme der Theorie $K'$ enthalten hier 
+alle Theoreme der Theorie $K$.
+
+\begin{defini}
+Eine Theorie $K'$ ist eine \emph{Erweiterung} von $K$,
+falls jedes Theorem von $K$ ebenfalls ein Theorem von $K'$ ist
+(d.\,h. aus $\vdash_{K} \alpha$ folgt $\vdash_{K'} \alpha$).
+\end{defini}
+
+Wenn -- wie oben -- $K'$ aus $K$ durch Hinzunahme
+des zus\"atzlichen Axioms $\alpha$ entsteht,
+dann schreiben wir $K' = K + \{\alpha\}$.
+
+Wenn weder $\alpha$ noch $\neg \alpha$ g\"ultig ist, 
+dann bleibt eine konsistente Theorie $K$ nach Hinzunahme von Axiom $\alpha$
+konsistent.
+Also kann von jeder abgeschlossenen Formel $\alpha$
+stets eine der beiden Formeln $\alpha$ und $\neg \alpha$
+ein Axiom sein.
+Falls eine der beiden Formeln beweisbar ist, muss man
+nat\"urlich die beweisbare Formel ausw\"ahlen.
+
+\begin{defini}
+Eine Theorie $K$ hei\3t \emph{abgeschlossen},
+falls f\"ur jede geschlossene Formel $\alpha$ (von $K$)
+gilt: $\vdash_{K} \alpha$ oder $\vdash_{K} \neg \alpha$.
+\end{defini}
+
+In einer konsistenten und abgeschlossenen Theorie
+gilt dann f\"ur jede geschlossene Formel $\alpha$:
+entweder $\vdash \alpha$ oder $\vdash \neg \alpha$ (aber nicht beides).
+Solche Theorien gibt es,
+und jede konsistente Theorie l\"asst sich dazu erweitern.
+
+\begin{satz}[Lindenbaums Lemma]\label{satz-lindenbaumlemma}
+F\"ur jede konsistente Theorie $K$
+gibt es eine konsistente und abgeschlossene Erweiterung $K'$.
+(Dabei haben $K$ und $K'$ die gleichen Formeln.)
+\end{satz}
+
+\begin{proof}
+Sei $K$ eine konsistente Theorie.
+$\beta_1, \beta_2, \ldots$ sei eine
+Aufz\"ahlung aller geschlossenen Formeln von $K$.
+Wir definieren induktiv Theorien $J_0, J_1, J_2, \ldots$,
+die Erweiterungen von $K$ sind.
+\begin{enumerate}
+\item $J_0=K$
+\item $J_{i+1} = \begin{cases}
+                   J_i, & \text{falls $\vdash_{J_i} \neg \beta_{i+1}$} \\
+                   J_i + \{\beta_{i+1}\}, &\text{falls $\not\vdash_{J_i} \neg \beta_{i+1}$}
+                 \end{cases}
+      $
+\end{enumerate}
+F\"ur $J_i$ gilt also: 
+$\vdash_{J_i} \neg \beta_i$ (da $\vdash_{J_{i-1}} \neg \beta_{i}$)
+oder
+$\vdash_{J_i} \beta_i$ (da $\not\vdash_{J_{i-1}} \neg \beta_{i}$
+und $\beta_i$ Axiom von $J_i$ ist).
+
+Nach \autoref{lemma-kons-erweiterung} ist jedes $J_i$ konsistent.
+
+Definiere $K'$ als die Theorie, die alle Axiome aller $J_i$ enth\"alt.
+Also ist $K'$ eine Erweiterung aller $J_i$
+und damit auch eine Erweiterung von $K=J_0$.
+
+Jeder Beweis in $K'$ ist endlich
+und kann deshalb nur eine endliche Anzahl von Axiomen enthalten.
+Also kann jeder Beweis auch in einer \glqq Untertheorie\grqq\xspace $J_i$
+gef\"uhrt werden.
+Da alle $J_i$ konsistent sind, muss $K'$ ebenfalls konsistent sein.
+
+$K'$ ist abgeschlossen:
+sei $\alpha$ eine geschlossene Formel.
+Dann gibt es ein $i$ mit $\alpha=\beta_i$.
+Nach obiger Bemerkung gilt $\vdash_{J_i} \neg \beta_i$
+oder $\vdash_{J_i} \beta_i$.
+Da $K'$ eine Erweiterung von $J_i$ ist,
+folgt $\vdash_{K} \neg \beta_i$ oder $\vdash_{K} \beta_i$.
+\end{proof}
+
+In einer konsistenten und abgeschlossenen Theorie k\"onnen
+Formeln bewiesen werden, die nicht g\"ultig sind.
+Solche Formeln sind nicht in jeder Interpretation wahr.
+Deshalb stellt sich die Frage, ob solche Theorien
+\"uberhaupt noch Modelle besitzen.
+(Ein Modell f\"ur eine Theorie ist eine Interpretation,
+unter der alle Axiome der Theorie wahr sind.
+Daraus folgt, dass unter dieser Interpretation ebenfalls
+alle beweisbaren Formeln wahr sind.)
+
 \clearpage
 \appendix
 
