--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -4196,22 +4196,60 @@ $x$ kommt in $\alpha$ nicht frei vor:
 \subsection*{Aufgabe 1}
 Zeigen Sie
 \begin{gather*}
-  \vdash (\exists x(\forall y \alpha)) \rightarrow (\forall y
-     (\exists x \alpha))
+  \vdash (\exists x~(\forall y ~\alpha)) \rightarrow (\forall y ~(\exists x \alpha))
 \end{gather*}
-Tipp: Hyp, Regel C, RA4, RE4, Gen.
+
+    \begin{align*}
+      (1)\quad & (\exists x~(\forall y ~\alpha)) & \text{Hypothese} \\
+      (2)\quad & (\forall y ~ \alpha[x/c])   & \text{Regel C, 1} \\
+      (3)\quad & \underbrace{(\alpha[x/c])[y/y]}_{=\alpha[x/c]}   & \text{RA4, 2} \\
+      (4)\quad & (\exists x ~ \alpha) & \text{RE4, 3} \\
+      (5)\quad & (\forall y ~ (\exists x ~ \alpha))   & \text{Gen, 3} \\
+    \end{align*}
+Die Generalisierung in Schritt (5) betrifft eine
+Variable, die in der durch Regel C in Schritt (3) erhaltenen Formel
+nicht frei vorkommt und ebenfalls in der Hypothese nicht frei vorkommt.
+Deshalb war die Anwendung von Regel C korrekt
+und dass Deduktionstheorem kann angewendet werden.
+\vspace{1ex}
 
 Zeigen Sie, dass die Formel nicht gilt:
 \begin{gather*}
-  (\forall y (\exists x \alpha)) \rightarrow (\exists x (\forall y \alpha))
+  (\forall y~ (\exists x ~A(x,y))) \rightarrow (\exists x~ (\forall y ~A(x,y)))
 \end{gather*}
-Warum funktioniert der Beweis bei folgender Formel nicht?
+
+Die Interpretation $\cM$ mit Grundmenge $\N$
+und $(A)^{\cM}=\{(x,y) \mid x>y\}$ ist kein Modell der Formel.
+\vspace{1ex}
+
+Warum funktioniert obiger Beweis bei letzterer Formel nicht?
+
+Weil die Generalisierung eine Varibale betrifft,
+die in der durch Regel C erzeugten Formel frei vorkommt.
+Deshalb ist die Anwendung von Regel C nicht korrekt.
+
 
 \subsection*{Aufgabe 2}
 \begin{gather*}
-  \vdash (\exists x \alpha\rightarrow\beta) \rightarrow ((\forall x
-     \alpha) \rightarrow (\exists x \beta))
+  \vdash (\exists x ~\alpha\rightarrow\beta) \rightarrow 
+        ((\forall x ~\alpha) \rightarrow (\exists x ~\beta))
 \end{gather*}
+
+
+    \begin{align*}
+      (1)\quad &  (\exists x ~\alpha\rightarrow\beta) & \text{Hypothese} \\
+      (2)\quad &   \underbrace{(\alpha\rightarrow\beta)[x/c]}_{=\alpha[x/c] \rightarrow \beta[x/c]} & \text{Regel C, 1} \\
+      (3)\quad &  (\forall x ~\alpha)  & \text{Hypothese} \\
+      (4)\quad &  \alpha[x/c]  & \text{RA4, 3} \\
+      (5)\quad &  \beta[x/c]   & \text{MP 4,2} \\
+      (6)\quad &  (\exists x ~ \beta)   & \text{RE4, 5}
+    \end{align*}
+Hier ist wichtig, dass Schritt (2) vor Schritt (4) kommt.
+Die durch Regel C eingeführte Konstante
+kann durch Regel RA4 in Schritt (4) wiederverwendet werden.
+Da im Beweis keine Generalisierungen vorkommen,
+kann das Deduktionstheorem angewendet werden.
+
 
 \subsection*{Aufgabe 3}
 Gebundene Umbenennung von Variablen. Bsp.: $\exists c \exists n_{0}^{n}
@@ -4219,16 +4257,37 @@ Gebundene Umbenennung von Variablen. Bsp.: $\exists c \exists n_{0}^{n}
 
 Formal: Sei $\alpha$ eine Formel mit freier Variablen $x$ ohne freies
 Vorkommen von $y$ und mit $y$ frei für $x$ in $\alpha$. Dann gilt:
-$\vdash (\forall x \alpha) \leftrightarrow (\forall y \alpha[x/y])$
+$\vdash (\forall x ~\alpha) \leftrightarrow (\forall y ~\alpha[x/y])$.
 
-Tipp: A4, Gen, A5, MP
+Wir zeigen zuerst $\vdash (\forall x ~\alpha) \rightarrow (\forall y ~\alpha[x/y])$.
+    \begin{align*}
+      (1)\quad & (\forall x ~\alpha) & \text{Hypothese} \\
+      (2)\quad & \alpha[x/y] & \text{RA4, 1} \\
+      (3)\quad & (\forall y ~\alpha[x/y]) & \text{Gen, 2} 
+    \end{align*}
+Schritt (2) ist korrekt, da $y$ frei für $x$ in $\alpha$ ist.
+Nun zeigen wir $\vdash (\forall y ~\alpha[x/y] \rightarrow (\forall x ~\alpha)$.
+    \begin{align*}
+      (1)\quad & (\forall y ~\alpha[x/y]) & \text{Hypothese} \\
+      (2)\quad & \underbrace{(\alpha[x/y])[y/x]}_{=\alpha} & \text{RA4, 1} \\
+      (3)\quad & (\forall x ~\alpha) & \text{Gen, 2} 
+    \end{align*}
+Schritt (2) ist korrekt, da $y$ in $\alpha$ nicht frei vorkommt.
+Alle freien Vorkommen von $y$ in $\alpha[x/y]$ sind also solche,
+die freie Vorkommen von $x$ in $\alpha$ ersetzt haben.
+
+Aus  $\vdash (\forall x ~\alpha) \rightarrow (\forall y ~\alpha[x/y])$
+und $\vdash (\forall y ~\alpha[x/y] \rightarrow (\forall x ~\alpha)$
+folgt $\vdash (\forall x ~\alpha) \leftrightarrow (\forall y ~\alpha[x/y])$
+mit der Äquivalenz-Regel.
+
 
 \section{Blatt 9}
 
-Sei $\alpha$ eine Formel ohne Quanttoren und $\vdash\alpha$ im
-Prädikatenkalkül 1.\,Ordnung. Zeigen Sie, $\alpha$ ist Instanz einer
-Tautologie. (Hinweise: falls nicht, dann gilt es eine Interpretation mit
-der Menge aller Terme von $\alpha$ als Grundmenge, under der $\alpha$
+Sei $\alpha$ eine Formel ohne Quantoren und $\vdash\alpha$ im
+Prädikatenkalkül 1.\,Ordnung. Zeigen Sie: $\alpha$ ist Instanz einer
+Tautologie. (Hinweis: falls nicht, dann gibt es eine Interpretation mit
+der Menge aller Terme von $\alpha$ als Grundmenge, unter der $\alpha$
 falsch ist.)
 
 Formel ohne Quantoren:
