--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -3724,6 +3724,159 @@ alle beweisbaren Formeln wahr sind.)
 Zusammengefasst: Sei $K$ Prädikatenkalkül 1.\,Ordnung. Dann sind die
 gültigen Formeln genau die in $K$ beweisbaren Formeln.
 
+
+\chapter{Formale Zahlentheorie}
+
+Zahlentheorie befasst sich mit Eigenschaften von nat\"urlichen Zahlen.
+Einerseits scheint es einfach, ein intuitives Verständnis von
+den natürlichen Zahlen zu entwickeln.
+Andererseits möchte man gerne Axiome formulieren,
+auf deren Grundlage man formal Sätze der Zahlentheorie beweisen kann.
+Als Grundlage dafür dienen die fünf \textit{Peano-Axiome}.
+
+\begin{itemize}
+\item[(P1)] $0$ ist eine nat\"urliche Zahl.
+\item[(P2)] Jede nat.\,Zahl $z$ hat einen Nachfolger $z'$. \ \  ($z'$ steht f\"ur $z+1$)
+\item[(P3)] $0\not=z'$ f\"ur jede nat.\,Zahl $z$.
+\item[(P4)] Aus $x'=y'$ folgt $x=y$.
+\item[(P5)] Sei $Q$ eine Eigenschaft von nat.\,Zahlen.
+            Wenn 
+            \begin{itemize}
+              \item[(1.)] $0$ Eigenschaft $Q$ hat, und
+              \item[(2.)] aus \glqq $z$ hat Eigenschaft $Q$\grqq ~ folgt
+                       \glqq $z'$ hat Eigenschaft $Q$\grqq,
+            \end{itemize}
+            dann haben alle nat.\,Zahlen Eigenschaft $Q$.
+\end{itemize}
+
+Die Gleichheitsrelation wird hier bereits als bekannt vorausgesetzt.
+
+Basierend auf diesen Axiomen definieren wir eine formale Theorie
+für die Zahlentheorie.
+Diese Theorie nennen wir S.
+Sie hat nur ein eingeschränktes ``Vokabular''
+an Konstanten-, Funktions- und Prädikatensymbolen.
+
+{
+\newcommand{\abstand}{\rule{10mm}{0mm}}
+\textit{Formeln} der Theorie S bestehen aus folgenden Symbolen:
+
+\begin{itemize}
+\item[ein Konstantensymbol:] $a_1$, das mit $0$ bezeichnet wird
+\item[ein Pr\"adikatensymbol:] $A^2_1$, das mit $=$ bezeichnet wird
+\item[drei Funktionssymbole:] $f^1_1$, wobei $f^1_1(t)$ mit $t'$ bezeichnet wird \\
+   $f^2_1$, wobei $f^2_1(s,t)$ mit $s+t$ bezeichnet wird \\
+   $f^2_2$, wobei $f^2_2(s,t)$ mit $s\cdot t$ bezeichnet wird
+\item[übrige Symbole ohne Einschränkung:] Variablensymbole $x_1, x_2, \ldots$, 
+logische Verkn\"upf\-ungszeichen, Klammern
+\end{itemize}
+}
+
+Zu den logischen Axiomen kommen in S
+folgende zusätzliche Axiome.
+
+\begin{itemize}
+\item[(S1)] $x_1= x_2 ~ \rightarrow ~ (x_1=x_3 ~ \rightarrow ~ x_2=x_3)$
+\item[(S2)] $x_1= x_2 ~ \rightarrow ~ x_1'= x_2'$
+\item[(S3)] $0\not=x_1'$ 
+\item[(S4)] $x_1'= x_2' ~ \rightarrow ~ x_1= x_2$
+\item[(S5)] $x_1+0 = x_1$
+\item[(S6)] $x_1+(x_2') = (x_1+x_2)'$
+\item[(S7)] $x_1\cdot 0 = 0$
+\item[(S8)] $x_1\cdot (x_2') = (x_1\cdot x_2) + x_1$
+\item[(S9)] Sei $\alpha$ eine Formel mit freier Variable $x$.\\
+$\alpha(0)$ bezeichne $\alpha[x/0]$,
+$\alpha(x)$ bez. $\alpha$, und
+$\alpha(x')$ bez. $\alpha[x/x']$.\\
+Dann ist folgende Formel ein Axiom:
+
+\centering{
+
+$\alpha(0) ~ \rightarrow ~ \big((\forall x ~ \alpha(x) \rightarrow \alpha(x')\big)
+           ~ \rightarrow ~ \big(\forall x ~ \alpha(x)\big)$
+}
+\end{itemize}
+
+(S3) entspricht (P3), und (S4) entspricht (P4).
+(S5) und (S6) werden zur Definition der Additon gebraucht,
+und (S7) sowie (S8) entsprechend zur Multiplikation.
+(S9) beschreibt die Induktion.
+(S1) und (S2) werden zur Definition
+von Eigenschaften der Gleichheit gebraucht.
+
+\begin{lemma}
+Alle Formeln, die aus Axiomen mittels Ersetzen von Variablen
+durch Terme bestehen, sind in $S$ beweisbar.
+\end{lemma}
+
+Als Beispiel betrachten wir die Formeln,
+die man aus (S1) mittels Ersetzen von Variablen durch Terme erhält.
+Dieses Axiomen-Schema nennen wir (S1').
+
+(S1'): f\"ur alle Terme $r,s,t$ gilt
+$\vdash_{\mathrm{S}} r=s ~ \rightarrow ~ (r=t ~ \rightarrow ~ s=t)$
+
+
+\begin{proof}\mbox{}
+
+$
+\begin{array}{cll}
+(1) & x_1= x_2 ~ \rightarrow ~ (x_1=x_3 ~ \rightarrow ~ x_2=x_3) & \mbox{(S1)} \\
+(2) & (\forall x_1 ~ x_1= x_2 ~ \rightarrow ~ (x_1=x_3 ~ \rightarrow ~ x_2=x_3)) & \mbox{Gen}, 1 \\
+(3) & r = x_2 ~ \rightarrow ~ (r=x_3 ~ \rightarrow ~ x_2=x_3)   & \mbox{RA4}, 2 \\
+(4) & (\forall x_2 ~ r= x_2 ~ \rightarrow ~ (r=x_3 ~ \rightarrow ~ x_2=x_3)) & \mbox{Gen}, 3 \\
+(5) & r = s ~ \rightarrow ~ (r=x_3 ~ \rightarrow ~ s=x_3)   & \mbox{RA4}, 4 \\
+(6) & (\forall x_3 ~ r = s ~ \rightarrow ~ (r=x_3 ~ \rightarrow ~ s=x_3))   & \mbox{Gen}, 5 \\
+(7) &  r = s ~ \rightarrow ~ (r=t ~ \rightarrow ~ s=t)   & \mbox{RA4}, 6 \\
+\end{array}
+$
+\end{proof}
+
+%%%%%%%%%%%%%
+
+Damit erhalten wir folgende Theoreme von S
+über grundlegende Eigenschaften der Gleichheitsrelation 
+(Reflexivität, Symmetrie, Transitivität)
+sowie der Addition (Kommutativität, Assoziativität).
+
+\begin{lemma}
+F\"ur alle Terme $r$, $s$, $t$ sind folgende Formeln
+Theoreme von S.
+
+$
+\begin{array}{clcl}
+(a) & t=t & (i) & t=r ~ \rightarrow ~ s+t=s+r \\
+(b) & t=r ~ \rightarrow ~ r=t & (j) & (t+r)+s = t+ (r+s) \\
+(c) & t=r ~ \rightarrow ~ (r=s ~ \rightarrow ~ t=s) & (k) & t=r ~ \rightarrow~ t\cdot s= r\cdot s \\
+(d) & r=t ~ \rightarrow ~ (s=t ~ \rightarrow ~ r=s) & (l) & 0\cdot t = 0 \\
+(e) & t=r ~ \rightarrow ~ t+s=r+s & (m) & t'\cdot r = t\cdot r + r \\
+(f) & t = 0+t & (n) & t \cdot r = r\cdot t\\
+(g) & t'+r = (t+r)' & (o) & t=r ~\rightarrow~ s\cdot t=s\cdot r\\
+(h) & t+r = r+t & & \\
+\end{array}
+$
+
+\end{lemma}
+
+Das Standard-Modell f\"ur S besteht
+aus den nat\"urlichen Zahlen als Grundmenge
+und der ``intuitiven'' Interpretaion der übrigen Symbole.
+
+\begin{itemize}
+\item Grundmenge: die nat\"urlichen Zahlen 
+\item das Konstantensymbol $0$ wird durch die nat.\,Zahl $0$ interpretiert
+\item $f^1_1$ ($'$) wird durch Addition mit $1$ interpretiert
+\item $f^2_1$ und $f^2_2$ werden durch Addition und Multiplikation interpretiert
+\item $A^2_1$ wird durch die Gleichheitsrelation interpretiert
+\end{itemize}
+
+``Offensichtlich'' sind die Axiome von S wahr im Standard-Modell.
+
+Es gibt jedoch auch Modelle f\"ur S mit
+\"uberabz\"ahlbarer Grundmenge \ldots
+
+
+
 \clearpage
 \appendix
 
