--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -3887,24 +3887,23 @@ $
 \end{array}
 $
 \begin{proof}
-Wir führen ein paar Beweise als Beispiele auf.
+Wir führen ein paar Beweise auf, die auch als Beispiele 
+für die fehlenden Beweise gesehen werden können.
 
 (a)
-
 $
-\begin{array}{cll}
-(1) & t+0=t & (S5') \\
-(2) & (t+0=t) \rightarrow ((t+0=t)\rightarrow(t=t)) & (S1') \\
+\begin{array}[t]{cll}
+(1) & t+0=t & \text{(S5')} \\
+(2) & (t+0=t) \rightarrow ((t+0=t)\rightarrow(t=t)) & \text{(S1')} \\
 (3) & (t+0=t)\rightarrow(t=t) & \text{MP}~ 1,2 \\
 (4) & t=t & \text{MP}~ 1,3
 \end{array}
 $
 
 (b)
-
 $
-\begin{array}{cll}
-(1) & (t=r) \rightarrow((t=t) \rightarrow(r=t)) & (S1') \\
+\begin{array}[t]{cll}
+(1) & (t=r) \rightarrow((t=t) \rightarrow(r=t)) & \text{(S1')} \\
 (2) & t=r & \text{Hypothese} \\
 (3) & (t=t) \rightarrow (r=t) & \text{MP}~ 2,1 \\
 (4) & t=t & \text{Teil (a)} \\
@@ -3920,8 +3919,8 @@ Als Induktionsanfang zeigen wir $x=y ~ \rightarrow ~ (x+0=y+0)$ $(=\alpha(0))$.
 
 $
 \begin{array}{cll}
-(1) & x+0 = x  & (S5') \\
-(2) & y+0 = y  & (S5') \\
+(1) & x+0 = x  & \text{(S5')} \\
+(2) & y+0 = y  & \text{(S5')} \\
 (3) & x=y & \text{Hypothese} \\
 (4) & (x+0=x) \rightarrow(~x=y ~ \rightarrow ~x+0=y) & \text{Teil (c)} \\
 (5) & x=y ~ \rightarrow ~ x+0=y & \text{MP}~ 1,4 \\
@@ -3948,11 +3947,11 @@ $
 (1) & x=y ~ \rightarrow ~ (x+z=y+z) & \text{Hypothese $\alpha(z)$} \\
 (2) & x=y & \text{Hypothese} \\
 (3) & x+z=y+z & \text{MP}~ 1,2 \\
-(4) & x+z=y+z ~ \rightarrow ~    (x+z)'=(y+z)' & (S2') \\
+(4) & x+z=y+z ~ \rightarrow ~    (x+z)'=(y+z)' & \text{(S2')} \\
 (5) & (x+z)'=(y+z)' & \text{MP}~ 3, 4 \\
-(6) &  x+z'=(x+z)' & (S6') \\
+(6) &  x+z'=(x+z)' & \text{(S6')} \\
 (7) &  x+z'=(y+z)'& \text{Symm. von $=$, Trans. von $=$}~ 5,6 \\
-(8) & (y+z)'= y+z'& (S6'), \text{Symm. von $=$} \\
+(8) & (y+z)'= y+z'& \text{(S6')}, \text{Symm. von $=$} \\
 (9) & x+z'=y+z' & \text{Trans. von $=$}~ 7, 8 \\
 \end{array}
 $
@@ -3975,7 +3974,8 @@ Der Nachfolger von $0'$ ist im intuitiven Verständnis die $1$.
 Wir führen die Schreibweise
 $\overline{1}$ für $0'$
 und entsprechend
-$\overline{m}$ für $0\overbrace{'^{\cdots}'}^{\text{$m$-mal}}$
+$\overline{m}$ für %% $0\underbrace'^{\cdots}'}_{\text{$m$-mal}}$
+$0\overbrace{'\raisebox{.7ex}{$\cdots$} '}^{\text{$m$-mal}}$
 ein.
 
 \begin{lemma}
@@ -3988,6 +3988,32 @@ dann gilt $\xvdash[S]{} \neg(\overline{m}=\overline{n})$.
 $\xvdash[S]{} \overline{n+m} = \overline{n} + \overline{m}$
 \end{enumerate}
 \end{lemma}
+
+\begin{proof}
+\begin{enumerate}
+\item O.\,B.\,d.\,A.\, sei $m>n$.
+
+$
+\begin{array}{cll}
+(1) & \overline{n} = \overline{m} & \text{Hypothese} \\
+(2) & \overline{n} = \overline{m} ~\rightarrow~ \overline{n-1}=\overline{m-1} & \text{(S4')} \\
+\vdots & \vdots & \vdots \\
+(n+1) & \overline{1} = \overline{m-n+1} ~\rightarrow~ \overline{0}=\overline{m-n} & \text{(S4')} \\
+(n+2) & \overline{0}=\overline{m-n} & \text{MP} ~ (1)-(n+1) \\
+(n+3) & \neg (0=\overline{m-n}) & \text{(S3'), da $m-n>0$} \\
+(n+4) & \overline{0}=\overline{m-n} ~ \wedge \neg (0=\overline{m-n}) &
+                  \text{Konjunktionsregel}~ (n+2), (n+3) 
+\end{array}
+$
+
+Damit ist gezeigt: $\overline{n} = \overline{m} \xvdash[S]{}
+            \overline{0}=\overline{m-n} ~ \wedge \neg (0=\overline{m-n})$.
+Mit der Regel Widerspruchs-Beweis folgt $\xvdash[S]{} \overline{n} = \overline{m}$.
+\item
+
+\end{enumerate}
+\end{proof}
+
 
 \begin{lemma}
 Sei $t$ ein Term. Dann gilt
