* skript.latex   + Die Erklärung für den nicht formalen Beweis gegeben.
  + Eine Erklärung abgegeben, dass Axiome immer wahr sind und damit ein
    \help gelöst.

So es hat eben angefangen zu regnen und jetzt wird es bei mir im Zimmer
etwas kühler. Ich geh' jetzt schlafen! Gute Nacht. :-)


git-svn-id: https://svn.lug-jena.de/uni-skripte@379 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -926,13 +926,19 @@ Tautologie ist. Dazu benutzt man den Begriff der \emph{Theorie}.
   ist ein Tripel $(\mathcal{F}, \mathrm{Ax}, \mathrm{R})$ bestehend aus
   \begin{enumerate}
    \item einer Menge von \emph{Formeln} $\mathcal{F}$,
-   \item einer Menge von \emph[indexrand=Axiome]{Axiomen}
+   \item einer Menge von \emph[indexrand=Axiom]{Axiomen}
     $\mathrm{Ax} \subseteq \mathcal{F}$ und
    \item einer endlichen Menge entscheidbarer Relationen
     $\mathrm{R}\subseteq\mathcal{F}^{n}\rightarrow\mathcal{F}$, die man als
     \emph{Ableitungsregeln} bezeichnet.
   \end{enumerate}
 \end{defini}
+
+Ein \emph{Axiom} ist eine Formel, die per Definition eine immer gültige
+Aussage darstellt. Man kann mithilfe der Wahrheitswerttabelle oder
+äquivalenten Umformungen zeigen, dass es sich um eine Tautologie handelt
+-- da sonst die gesamte Theorie nicht korrekt ist --, aber diese
+(Fleiß"~)""Arbeit sei dem geneigten Leser überlassen.
 
 \begin{defini}[Theorie für Aussagenlogik]
   Die \emph[index=Theorie!Aussagenlogik]{Theorie für Aussagenlogik}
@@ -1200,8 +1206,7 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
 
     \begin{mdescription}
      \item[IA:] Sei $k=1$, d.\,h. $\beta$ ist eine Axiom. Alle Axiome sind
-      Tautologien, also ist $\beta$ auch eine Tautologie. \help{Ist das
-      mal irgendwo definiert worden?}
+      Tautologien, also ist $\beta$ auch eine Tautologie.
 
      \item[IV:] Jedes Theorem von $\mathrm{L}$, dessen Beweis die Länge
       $\leq n$ hat, ist eine aussagenlogische Tautologie.
@@ -1302,9 +1307,13 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
        (\alpha\rightarrow\beta)) & \text{\autoref{bsp:2} mit $(b)$, $(c)$}
   \end{align*}
   Dies ist keine streng formale Beweisführung (daher auch die Buchstaben
-  und keine Zahlen als Bezeichnung der Schritte), jedoch soll uns dies
-  hier genügen, da damit der Beweis skizziert ist. Der formale Beweis ist
-  einfach nur länger. \help{Warum? Was ist daran nicht formal?}
+  und keine Zahlen als Bezeichnung der Schritte), da ein Beweis in der
+  Theorie~$\mathrm{L}$ eine Folge von Formeln ist, in denen jedoch nicht
+  das Zeichen $\vdash$ vorkommen darf. Jede Zeile mit einem $\vdash$ steht
+  eigentlich als Abkürzung für einen korrekten formalen Beweis \ldots
+
+  Uns soll dies hier jedoch genügen, da damit der Beweis skizziert ist.
+  Der formale Beweis ist einfach nur länger.
 \end{lemma}
 
 \begin{lemma}\label{lem:7}
