--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -1106,14 +1106,14 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
 
   \begin{proof}
     \begin{mdescription}
-      \item[?$\Leftarrow$“] Es gelte $\Gamma \Lvdash
+      \item[\glqq$\Leftarrow$\grqq] Es gelte $\Gamma \Lvdash
       \alpha\rightarrow\beta$. Nimmt man zusätzlich $\alpha$ zur Menge
       $\Gamma$ hinzu, gilt $\Gamma, \alpha \Lvdash \alpha$
       und $\Gamma, \alpha \Lvdash \alpha\rightarrow\beta$.
       Daraus kann man mittels Anwendung von modus ponens: $\Gamma,\alpha
       \Lvdash \beta$ zeigen.
 
-     \item[?$\Rightarrow$“] Es gelte $\Gamma, \alpha \Lvdash \beta$.
+     \item[\glqq$\Rightarrow$\grqq] Es gelte $\Gamma, \alpha \Lvdash \beta$.
 
       Wir führen eine Induktion über die Länge $k$ des Beweises von
       $\beta$ aus $\Gamma,\alpha$.
@@ -1376,9 +1376,9 @@ Nocheinmal als Zusammenfassung alle gezeigten Theoreme:
 
 \subsection{Vollständigkeit von \texorpdfstring{$\mathrm{L}$}{L}}
 
-?Vollständigkeit von $\mathrm{L}$“ bedeutet, dass jede aussagenlogische
-Tautologie ein Theorem von $\mathrm{L}$ ist. (?Korrektheit von
-$\mathrm{L}$“ wiederum bedeutet: jedes Theorem von $\mathrm{L}$ ist eine
+\glqq Vollständigkeit von $\mathrm{L}$\grqq\xspace bedeutet, dass jede aussagenlogische
+Tautologie ein Theorem von $\mathrm{L}$ ist. (\glqq Korrektheit von
+$\mathrm{L}$\grqq\xspace wiederum bedeutet: jedes Theorem von $\mathrm{L}$ ist eine
 aussagenlogische Tautologie. -- \autoref{satz:1})
 
 \begin{bsp}
@@ -1667,8 +1667,8 @@ $\mathcal{A}_{1}=\{\neg A, B\}, \mathcal{A}_{2}=\{\neg A,B\},
     $\phi$ ist eine aussagenlogische Tautologie \gdw $\Lvdash
     \phi$.
   \end{center}
-  ?Tautologie“ ist ein semantischer Ausdruck und
-  ?$\Lvdash$“ ist ein syntaktischer Ausdruck
+  \glqq Tautologie\grqq\xspace ist ein semantischer Ausdruck und
+  \glqq $\Lvdash$\grqq\xspace ist ein syntaktischer Ausdruck
 \end{description}
 
 \section{Resolution}
@@ -1762,9 +1762,9 @@ Verfahren für die Umformung verwenden.
 
   \todo{wahrheitstabelle für $c_{4}\leftrightarrow c_{0}\rightarrow c_{3}$}
 
-  Jede ?kleine“ Äquivalenz aus 3~Variablen hat eine konjunktive
+  Jede \glqq kleine\grqq\xspace Äquivalenz aus 3~Variablen hat eine konjunktive
   Normalform aus höchstens 8~Klauseln zu je 3~Literalen. Für jedes
-  Verknüpfungszeichen von $\phi$ enthält $\phi'$ eine ?kleine“
+  Verknüpfungszeichen von $\phi$ enthält $\phi'$ eine \glqq kleine\grqq\xspace
   Äquivalenz. Also ist $\abs{\phi'} \leq k\cdot\abs{\phi}$ für eine
   Konstante $k$.
 \end{bsp}
@@ -2064,7 +2064,7 @@ Diese Widerlegungen sind in \autoref{zweiwiderlegungen} dargestellt.
 \caption{Widerlegungen von $S^A$ und $S^{\neg A}$}\label{zweiwiderlegungen}
 \end{figure}
 %
-Die ?Blätter“ der beiden Bäume in \autoref{zweiwiderlegungen}
+Die \glqq Blätter\grqq\xspace der beiden Bäume in \autoref{zweiwiderlegungen}
 sind Klauseln aus $S^A$ bzw. Klauseln aus $S^{\lneg A}$.
 Nun fügen wir in alle Blätter, die nicht durch Klauseln in $S$
 beschriftet sind,
@@ -2230,10 +2230,10 @@ Optimierungen:
 
 Es gibt Klauselmengen, deren Resolutionswiderlegungen exponentiell lang sind.
 Ein Beispiel dafür sind die
-Taubenschlagformeln $PHP_{k}$ (?pigeon hole principle“ für $k$
+Taubenschlagformeln $PHP_{k}$ (\glqq pigeon hole principle\grqq\xspace für $k$
 Tauben) -- in einem Taubenschlag mit $k-1$ Löchern können nicht $k$
 Tauben sitzen, wenn in jedem Loch höchstens eine Taube sitzen darf.
-Variable $A_{i,j}$ entspricht ?Taube $j$ sitzt in Loch $i$“
+Variable $A_{i,j}$ entspricht \glqq Taube $j$ sitzt in Loch $i$\grqq\xspace
 ($i=1,2,\ldots,k; j=1,2,\ldots,k-1$).
 Die Formeln bestehen aus zwei Teilen.
 Der erste Teil drückt aus, dass jede Taube in (mindestens) einem Loch sitzt,
@@ -2306,7 +2306,7 @@ muss also $S$ am Ende des Beweises stehen.
 Alle Beweise beginnen also mit der Klauselmenge, die nur aus der leeren Klausel besteht
 (einziges Axiom).
 Diese Klauselmenge ist unerfüllbar.
-Durch die Schlussregel (Res) wird ein Resolutionsschritt ?rückwärts“
+Durch die Schlussregel (Res) wird ein Resolutionsschritt \glqq rückwärts\grqq\xspace
 ausgeführt,
 und durch (Einf) wird eine beliebige zusätzliche Klausel in die Klausel in
 die Klauselmenge eingfügt.
@@ -2369,11 +2369,11 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
 
   Sprachliche Mittel:
   \begin{itemize}
-   \item Eigenschaft $M(x,y)$ mit der Bedeutung ?$x$ mag $y$“
-   \item Individuen $a$ bedeutet ?ich“, $b$ bedeutet ?meine Frau“ und
-    $c$ bedeutet ?Peter“
-   \item Quantoren über Variablen: $\forall x\colon P(x)$ heißt ?für alle $x$
-    gilt Eigenschaft $P$“ (im Bsp.: $\forall x\colon M(x,a) \rightarrow M(x,b)$)
+   \item Eigenschaft $M(x,y)$ mit der Bedeutung \glqq $x$ mag $y$\grqq 
+   \item Individuen $a$ bedeutet \glqq ich\grqq, $b$ bedeutet \glqq meine Frau\grqq\xspace und
+    $c$ bedeutet \glqq Peter\grqq 
+   \item Quantoren über Variablen: $\forall x\colon P(x)$ heißt \glqq für alle $x$
+    gilt Eigenschaft $P$\grqq\xspace (im Bsp.: $\forall x\colon M(x,a) \rightarrow M(x,b)$)
   \end{itemize}
 \end{bsp}
 
@@ -2397,8 +2397,8 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
 \begin{defini}[Quantoren]
   \index{Quatoren}
   $\forall$ bezeichnet man als \emph{Allquantor} und $\exists$ als
-  \emph{Existenzquantor}. $\exists x\ P(x)$ bedeutet ?es gibt
-  (mindestens) ein $x$ für das $P(x)$ gilt.“
+  \emph{Existenzquantor}. $\exists x\ P(x)$ bedeutet \glqq es gibt
+  (mindestens) ein $x$ für das $P(x)$ gilt.\grqq
 \end{defini}
 
 \begin{tabular}{l@{\qquad}l}
@@ -2407,7 +2407,7 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
   Also gibt es Tiere, die laufen können & $\exists x\colon T(x) \wedge L(x)$
 \end{tabular}
 
-Die ?Sprache“ der Theorien 1.\,Ordnung:
+Die \glqq Sprache\grqq der Theorien 1.\,Ordnung:
 \begin{description}
  \item[Zeichen:] logische Verknüpfungszeichen wie $\neg$, $\rightarrow$,
   $\wedge$, $\vee$, $\leftrightarrow$,\\
@@ -2446,7 +2446,7 @@ Die ?Sprache“ der Theorien 1.\,Ordnung:
     abkürzende Schreibweise gebraucht werden. $(\exists x_{i} \alpha)$
     ist Abkürzung für $(\neg (\forall x_{i} (\neg \alpha)))$]}
 
-    ?Überflüssige“ Klammern können zur Vereinfachung der Schreibweise
+    \glqq Überflüssige\grqq\xspace Klammern können zur Vereinfachung der Schreibweise
     weggelassen werden.
   \end{enumerate}
 \end{defini}
@@ -2460,7 +2460,7 @@ Die ?Sprache“ der Theorien 1.\,Ordnung:
 \end{bsp}
 
 In $(\forall x_{i} \alpha)$ ist $\alpha$ der \emph{Gültigkeitsbereich}
-des Quantors ?$\forall x_{i}$.“ Eine Variable $y$, die im
+des Quantors \glqq$\forall x_{i}$.\grqq\xspace Eine Variable $y$, die im
 Gültigkeitsbereich eines Quantors $\forall y$ liegt oder die Teil des
 Quantors sind, heißt \emph[index=Variable!gebundene]{gebunden}. Falls
 eine Variable nicht gebunden ist, dann heißt sie
@@ -2634,7 +2634,7 @@ falls jede Formel in $\Gamma$ wahr unter $\cM$ ist.
 \end{itemize}
 \end{defini}
 
-Schreibweise für ?$\alpha$ ist wahr unter $\cM$“: ~~~$\Mmodels ~\alpha$ .
+Schreibweise für \glqq $\alpha$ ist wahr unter $\cM$\grqq: ~~~$\Mmodels ~\alpha$ .
 
 
 Wichtige Eigenschaften von Formeln
@@ -3273,8 +3273,8 @@ Das gleiche gilt für
 jeder beliebige Theorie 1.\,Ordnung.
 
 \begin{figure}
-  \todo{Bild von Menge aller Formeln, die geteilt wird in ?die von $K$ beweisbare
-    Formeln“ und ?nicht in $K$ beweisbare Formeln“. In erster ist
+  \todo{Bild von Menge aller Formeln, die geteilt wird in \glqq die von $K$ beweisbare
+    Formeln\grqq\xspace und \glqq nicht in $K$ beweisbare Formeln\grqq. In erster ist
     $\alpha$ und $\neg\beta$, in zweiter $\neg\alpha$ und $\beta$. Menge
     erweitern um $\gamma$ zu $K'$, wobei $\neg\gamma$ in der Menge der nicht
     beweisbaren Formeln}
@@ -3431,7 +3431,7 @@ und damit auch eine Erweiterung von $K=J_0$.
 
 Jeder Beweis in $K'$ ist endlich
 und kann deshalb nur eine endliche Anzahl von Axiomen enthalten.
-Also kann jeder Beweis auch in einer ?Untertheorie“ $J_i$
+Also kann jeder Beweis auch in einer \glqq Untertheorie\grqq $J_i$
 geführt werden.
 Da alle $J_i$ konsistent sind, muss $K'$ ebenfalls konsistent sein.
 
@@ -3480,7 +3480,7 @@ alle beweisbaren Formeln wahr sind.)
 \end{bsp}
 
 \begin{defini}
-  Eine Theorie $K$ heißt T-produktiv (?scape goat“, engl. Sündenbock)
+  Eine Theorie $K$ heißt T-produktiv (\glqq scape goat\grqq, engl. Sündenbock)
   falls für jede Formel $\alpha$ mit genau einer freien Variablen $x$ ein
   variablenfreier Term $t$ existiert mit
   \begin{gather*}
@@ -3572,7 +3572,7 @@ alle beweisbaren Formeln wahr sind.)
     \begin{itemize}
      \item Die Grundmenge $D$ besteht aus allen variablenfreien Termen,
       die in $J$ gebildet werden können.
-     \item Konstanten- und Funktionssymbole werden ?durch sich selbst“
+     \item Konstanten- und Funktionssymbole werden \glqq durch sich selbst\grqq\xspace
       interpretiert:
       \begin{eqnarray*}
         (a_i)^{\cM} & = & a_i \\
@@ -3811,7 +3811,7 @@ Die Gleichheitsrelation wird hier bereits als bekannt vorausgesetzt.
 Basierend auf diesen Axiomen definieren wir eine formale Theorie
 für die Zahlentheorie.
 Diese Theorie nennen wir S.
-Sie hat nur ein eingeschränktes ?Vokabular“
+Sie hat nur ein eingeschränktes \glqq Vokabular\grqq\xspace
 an Konstanten-, Funktions- und Prädikatensymbolen.
 
 {
@@ -4586,7 +4586,7 @@ primitiv rekursiv.
 \end{satz}
 
 \begin{proof}
-Es ist lecht zu sehen, dass $\chi_{\neg P}(x) = \alpha(\chi_{P}(x))$, 
+Es ist leicht zu sehen, dass $\chi_{\neg P}(x) = \alpha(\chi_{P}(x))$, 
 $\chi_{P\wedge Q}(x) = \chi_P(x) \cdot \chi_Q(x)$
 und
 $\chi_{P\vee Q}(x) = \chi_{\neg(\neg P \wedge \neg Q)}
@@ -4650,10 +4650,11 @@ Definiere $f':\N^{k}\rightarrow\N$
 mit
 \begin{eqnarray*}
 f'(x_1,\ldots,x_k) & = & f(x_1,\ldots,x_k,0) \\
-& = & f(U^{(k)}_1(x_1,\ldots,x_k),\ldots,U^{(k)}_k(x_1,\ldots,x_k),Z^{(k)}(x_1,\ldots,x_k))\ \ .
+& = & f\left(U^{(k)}_1\left(x_1,\ldots,x_k\right),\ldots,
+             U^{(k)}_k\left(x_1,\ldots,x_k\right),Z^{(k)}\left(x_1,\ldots,x_k\right)\right)\ \ .
 \end{eqnarray*}
 $f'$ ensteht also durch Komposition aus
-den primitiv rekursiven Funktionen $f, U^{(k)}_1, \ldots, U^{(k)}_k, Z^{(k)}$.
+den primitiv rekursiven Funktionen $f$, $U^{(k)}_1$, \ldots, $U^{(k)}_k$, $Z^{(k)}$.
 Also ist $f'$ primitiv rekursiv.
 Nun kann $g$ mittels Rekursion definiert werden.
 %
@@ -4816,7 +4817,7 @@ mit $(t+1)\cdot y > x$.
 Formaler aufgeschrieben gilt
 $$
 \left\lfloor \frac{x}{y} \right\rfloor = 
-     \min\limits_{t\leq y}\left[(t+1)\cdot y > x \right] \ \ \ .
+     \min\limits_{t\leq x}\left[(t+1)\cdot y > x \right] \ \ \ .
 $$
 Damit lässt sich nun auch die mod-Operation einfach darstellen.
 $$
@@ -5213,8 +5214,8 @@ Sind die folgenden Argumentationen logisch korrekt?
   eine Tautologie (\autoref{satz:1}). Dann ist $\neg\alpha$ keine
   Tautologie. Folglich gilt nicht $\Lvdash\neg\alpha$.
 
-  Aus der Negation von ?Wenn $\Lvdash\alpha$ ein Theorem
-  ist, dann ist $\alpha$ eine Tautologie“ folgt: Wenn $\alpha$ keine
+  Aus der Negation von \glqq Wenn $\Lvdash\alpha$ ein Theorem
+  ist, dann ist $\alpha$ eine Tautologie\grqq\xspace folgt: Wenn $\alpha$ keine
   Tautologie ist, dann gilt nicht $\Lvdash\alpha$. Wenn
   $\neg\alpha$ also kein Theorem ist, dann ist $\alpha$ kein Theorem
 
@@ -5344,21 +5345,21 @@ Was bedeuten die Formeln und den angegebenene Interpretationen?
 \begin{enumerate}
  \item $(\exists n A_{1}^{2}(f_{1}^{2}(x,u), y) \wedge (\exists v
   A_{1}^{2}(f_{1}^{2}(x,v),z))$ auf der Grundmenge $\N$ und $A_{1}^{2}$
-  ist die Gleichheit ?$=$“ und $f_{1}^{2}$ die Multiplikation
+  ist die Gleichheit \glqq $=$\grqq\xspace und $f_{1}^{2}$ die Multiplikation
   ($u,v,x,y,z$ sind Variablensymbole)
 
   $\exists u\in\N\colon x\cdot u=y \wedge \exists v\in\N\colon x\cdot
-  v=z$. Das entspricht der Aussage ?$x$ ist gemeinsamer Teiler von $y$
-  und $z$“.
+  v=z$. Das entspricht der Aussage \glqq $x$ ist gemeinsamer Teiler von $y$
+  und $z$\grqq.
 
  \item $\forall y( (\exists z A_{1}^{2}(f_{1}^{2}(y,z),x)) \rightarrow
   (A_{1}^{2}(y,a) \wedge A_{1}^{2}(y,x)))$, Interpretation wie oben und
   $a=1$
 
   $\forall y\in\N\colon (\exists z\in\N\colon y\cdot z=x \rightarrow)
-  \rightarrow (y=1 \vee y=x)$. Das bedeutet ?$y$ ist Teiler von $x$
-  $\rightarrow$ $(y=1 \vee y=x)$.“ Dies wiederum bedeutet ?$x$ ist eine
-  Primzahl.“
+  \rightarrow (y=1 \vee y=x)$. Das bedeutet \glqq $y$ ist Teiler von $x$
+  $\rightarrow$ $(y=1 \vee y=x)$.\grqq\xspace Dies wiederum bedeutet \glqq $x$ ist eine
+  Primzahl.\grqq
 \end{enumerate}
 
 \subsection*{Aufgabe 2}
@@ -5371,7 +5372,7 @@ folgende Bedeutung hat.
     T(x, a) \wedge T(x,b) \wedge (\forall y\colon T(y,a) \wedge T(y, b)
        \wedge y\leq x)
   \end{gather*}
-  mit $T(\alpha,\beta)$ als ?$\alpha$ teilt $\beta$“.
+  mit $T(\alpha,\beta)$ als \glqq$\alpha$ teilt $\beta$\grqq.
 
  \item Es gibt unendlich viele Primzahlen.
 
@@ -5379,7 +5380,7 @@ folgende Bedeutung hat.
     \neg \big( \exists u\colon P(u) \wedge (\forall x\colon P(x) \wedge x
        < u) \big)
   \end{gather*}
-  mit $P(\alpha)$ als ?$\alpha$ ist prim“.
+  mit $P(\alpha)$ als \glqq$\alpha$ ist prim\grqq.
 
   oder: $P(2) \wedge \forall x \exists y (P(y) \wedge A_{1}^{2}(x,y))$
   mit $P(\alpha)$ als $\alpha$ ist prim und $A_{1}^{2}(\alpha,\beta)$ als
@@ -5748,7 +5749,7 @@ Bestandteilen von $\alpha$
 \end{gather*}
 und $(f)^{\mathcal{M}}(t) = f(t)$ für jedes $t$ in der Grundmenge.
 
-?Terme werden durch sich selbst interpretiert.“
+\glqq Terme werden durch sich selbst interpretiert.\grqq
 
 [$(A)^{\mathcal{M}} = \{x,y\}, (B)^{\mathcal{M}} = \emptyset$.]
 Prädikatensymbole werden entsprechend der Belegung der aussagenlogischen
